--- a/assets/tmc/lang/zh_cn.json
+++ b/assets/tmc/lang/zh_cn.json
@@ -1,4 +1,6 @@
 {
     "enchantment.tmc.soul_stealer": "灵魂窃取",
-    "enchantment.tmc.blood_blade": "鲜血利刃"
+    "enchantment.tmc.blood_blade": "鲜血利刃",
+    "attribute.name.kubejs.crit_rate": "会心率",
+    "attribute.name.kubejs.crit_bonus": "超会心"
 }
